--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="frontend/styles/main.css">
 </head>
 <body>
+    <!-- Navbar -->
     <div class="container">
         <nav class="row navbar navbar-expand-lg navbar-light bg-white">
             <a href="#" class="navbar-brand">
@@ -56,7 +57,23 @@
             </div>
         </nav>
     </div>
+
+    <!-- Header -->
+    <header class="text-center">
+        <h1>
+            Explore The Beautiful World <br/>
+            As Easy One Click
+        </h1>
+        <p class="mt-3">
+            You will see beautiful <br />
+            moment you never see before
+        </p>
+        <a href="#" class="btn btn-get-started px-4 mt-4">
+            Get Started
+        </a>
+    </header>
     <script src="frontend/libraries/jquery-3.6.1.min.js"></script>
     <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
+    <script src="frontend/libraries/retina/retina.min.js"></script>
 </body>
 </html>
