--- a/index.html
+++ b/index.html
@@ -72,6 +72,47 @@
             Get Started
         </a>
     </header>
+
+    <!-- Statistik -->
+    <main>
+        <div class="container">
+            <section class="section-stats row justify-content-center" id="stats">
+                <div class="col-3 col-md-2 stats-detail">
+                    <h2>
+                        20K
+                    </h2>
+                    <p>
+                        Members
+                    </p>
+                </div>
+                <div class="col-3 col-md-2 stats-detail">
+                    <h2>
+                        12
+                    </h2>
+                    <p>
+                        Countries
+                    </p>
+                </div>
+                <div class="col-3 col-md-2 stats-detail">
+                    <h2>
+                        3K
+                    </h2>
+                    <p>
+                        Hotel
+                    </p>
+                </div>
+                <div class="col-3 col-md-2 stats-detail">
+                    <h2>
+                        72
+                    </h2>
+                    <p>
+                        Patners
+                    </p>
+                </div>
+            </section>
+        </div>
+    </main>
+
     <script src="frontend/libraries/jquery-3.6.1.min.js"></script>
     <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
     <script src="frontend/libraries/retina/retina.min.js"></script>
