add Wisata Popular

--- a/index.html
+++ b/index.html
@@ -111,7 +111,104 @@
                 </div>
             </section>
         </div>
+
+         <!-- Wisata Popular -->
+        <section class="section-popular">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center section-popular-heading">
+                    <h2>Wisata Popular</h2>
+                    <p>
+                        Something that you never try <br />
+                        before in this world
+                    </p>
+                </div>
+            </div>
+        </div>
+        </section>
+
+        <!-- Card Travel -->
+        <section class="section-popular-content" id="popularContent">
+            <div class="container">
+                <div class="section-popular-travel row justify-context-center">
+                    <!-- Popular 1 -->
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                        style="background-image: url('frontend/images/popular-1.jpg') ;">
+                            <div class="travel-country">
+                                INDONESIA
+                            </div>
+                            <div class="travel-location">
+                                DERATAN, BALI
+                            </div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details">
+                                    View Details
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Popular 2 -->
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                        style="background-image: url('frontend/images/popular-2.jpg') ;">
+                            <div class="travel-country">
+                                INDONESIA
+                            </div>
+                            <div class="travel-location">
+                                BROMO, MALANG
+                            </div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details">
+                                    View Details
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Popular 3 -->
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                        style="background-image: url('frontend/images/popular-3.jpg') ;">
+                            <div class="travel-country">
+                                INDONESIA
+                            </div>
+                            <div class="travel-location">
+                                NUSA PENIDA
+                            </div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details">
+                                    View Details
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Popular 4 -->
+                    <div class="col-sm-6 col-md-4 col-lg-3">
+                        <div class="card-travel text-center d-flex flex-column"
+                        style="background-image: url('frontend/images/popular-4.jpg') ;">
+                            <div class="travel-country">
+                                MIDDLE EAST
+                            </div>
+                            <div class="travel-location">
+                                DUBAI
+                            </div>
+                            <div class="travel-button mt-auto">
+                                <a href="#" class="btn btn-travel-details">
+                                    View Details
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
     </main>
+
+   
+
 
     <script src="frontend/libraries/jquery-3.6.1.min.js"></script>
     <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
