--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
         </section>
 
-        <!-- Card Travel -->
+        <!-- Ppopular Content -->
         <section class="section-popular-content" id="popularContent">
             <div class="container">
                 <div class="section-popular-travel row justify-context-center">
@@ -199,6 +199,24 @@
                                 </a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Networks -->
+        <section class="section-networks">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2>Our Networks</h2>
+                        <p>
+                            Companies are trusted us <br />
+                            more than just a trip 
+                        </p>
+                    </div>
+                    <div class="col-md-8 text-center">
+                        <img src="frontend/images/partner.png" alt="Logo Partner" class="img-partner" />
                     </div>
                 </div>
             </div>
