add testimonial and footer

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </section>
 
         <!-- Networks -->
-        <section class="section-networks">
+        <section class="section-networks" id="networks">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -222,8 +222,160 @@
             </div>
         </section>
 
-        
+        <!-- Testimonial Heading-->
+        <section class="section-testimonial-heading" id="testimonialHeading">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center">
+                        <h2>They Are Loving Us</h2>
+                        <p>
+                            Moments were giving them <br />
+                            the best experience
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Testimonial Content -->
+        <section class="section-testimonial-content" id="testimonialContent">
+            <div class="container">
+                <!-- Popular Travel -->
+                <div class="section-popular-travel row justify-content-center">
+                    <!-- Testimonial Content 1 -->
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card card-testimonial text-center">
+                            <div class="testimonial-content">
+                                <img src="frontend/images/testimonial-1.png" alt="User"
+                                class="mb-4 rounded-circle">
+                                <h3 class="mb-4">Yunan </h3>
+                                <p class="testimonial">
+                                    “ It was glorious and I could 
+                                    not stop to say wohooo for 
+                                    every single moment
+                                    Dankeeeeee “
+                                </p>
+                            </div>
+                            <hr>
+                            <p class="trip-to mt-2">
+                                Trip to Ubud
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Testimonial Content 2 -->
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card card-testimonial text-center">
+                            <div class="testimonial-content">
+                                <img src="frontend/images/testimonial-2.png" alt="User"
+                                class="mb-4 rounded-circle">
+                                <h3 class="mb-4">Yuli</h3>
+                                <p class="testimonial">
+                                    “ The trip was amazing and
+                                    I saw something beautiful in
+                                    that Island that makes me
+                                    want to learn more “
+                                </p>
+                            </div>
+                            <hr>
+                            <p class="trip-to mt-2">
+                                Trip to Nusa Penida
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Testimonial Content 3 -->
+                    <div class="col-sm-6 col-md-6 col-lg-4">
+                        <div class="card card-testimonial text-center">
+                            <div class="testimonial-content">
+                                <img src="frontend/images/testimonial-3.png" alt="User"
+                                class="mb-4 rounded-circle">
+                                <h3 class="mb-4">Yayah</h3>
+                                <p class="testimonial">
+                                    “ I loved it when the waves
+                                    was shaking harder — I was
+                                    scared too “
+                                </p>
+                            </div>
+                            <hr>
+                            <p class="trip-to mt-2">
+                                Trip to Karimun Jawa
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <a href="#" class="btn btn-need-help px-4 mt4 mx-1">
+                            I Need Help
+                        </a>
+                        <a href="#" class="btn btn-get-started px-4 mt4 mx-1">
+                            Get Started
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <!-- Footer -->
+    <footer class="section-footer mt-5 mb-4 border-top">
+        <div class="container pt-5 pb-5">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-lg-3">
+                            <h5>FEATURES</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Review</a>
+                                </li>
+                                <li><a href="#">Community</a></li>
+                                <li><a href="#">Social Media Kit</a>
+                                </li>
+                                <li><a href="#">Affiliate</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>ACCOUNT</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Refund</a>
+                                </li>
+                                <li><a href="#">Security</a></li>
+                                <li><a href="#">Reward</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>COMPANY</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Career</a>
+                                </li>
+                                <li><a href="#">Help Center</a></li>
+                                <li><a href="#">Media</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-lg-3">
+                            <h5>GET CONNECTED</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#">Semarang, Jawa Tengah</a>
+                                </li>
+                                <li><a href="#">Indonesia</a></li>
+                                <li><a href="#">(024) 1234 - 4567</a>
+                                </li>
+                                <li><a href="#">support@nomads.id</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row border-top justify-content-center align-items-center pt-4">
+                <div class="col-auto text-gray-500 font-weight-light">
+                    2022 Copyright Nomads • All rights reserved • Made in Semarang
+                </div>
+            </div>
+        </div>
+    </footer>
 
    
 
