add detail page

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <div class="container-fluid">
             <div class="row border-top justify-content-center align-items-center pt-4">
                 <div class="col-auto text-gray-500 font-weight-light">
-                    2022 Copyright Nomads • All rights reserved • Made in Semarang
+                    2022 Copyright Nomads • All rights reserved • Made in Semarang, Indonesia
                 </div>
             </div>
         </div>
