--- a/checkout.html
+++ b/checkout.html
@@ -157,47 +157,80 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="card card-details card-right">
-                            <h2>Members are going</h2>
-                            <div class="members my-2">
-                                <img src="frontend/images/member-1.png" alt="" class="member-image mr-1">
-                                <img src="frontend/images/member-2.png" alt="" class="member-image mr-1">
-                                <img src="frontend/images/member-3.png" alt="" class="member-image mr-1">
-                                <img src="frontend/images/member-4.png" alt="" class="member-image mr-1">
-                                <img src="frontend/images/member-5.png" alt="" class="member-image mr-1">
-                            </div>
-                            <hr>
-                            <h2>Trip Information</h2>
+                            <h2>Checkout Information</h2>
                             <table class="trip-informations">
                                 <tr>
-                                    <th width="50%">Date of Departure</th>
+                                    <th width="50%">Members</th>
                                     <td width="50%" class="text-right">
-                                        12 Des, 2022
+                                        2 Person
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th width="50%">Duration</th>
+                                    <th width="50%">Additional VISA</th>
                                     <td width="50%" class="text-right">
-                                        4D 3N
+                                        $ 190,00
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th width="50%">Type</th>
+                                    <th width="50%">Trip Price</th>
                                     <td width="50%" class="text-right">
-                                        Open Trip
+                                        $ 80,00 / person
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th width="50%">Price</th>
+                                    <th width="50%">Sub Total</th>
                                     <td width="50%" class="text-right">
-                                        $80,00 / person
+                                        $ 280,00
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th width="50%">Total (+Unique Code)</th>
+                                    <td width="50%" class="text-right">
+                                        <span class="text-blue">$ 279,</span><span class="text-orange">33</span>
                                     </td>
                                 </tr>
                             </table>
+                            <hr />
+                            <h2>Payment Instructions</h2>
+                            <p class="payment-instuctions">
+                                Please complete your payment before to continue the wonderful trip
+                            </p>
+                            <div class="bank">
+                                <div class="bank-item pb-3">
+                                    <img src="frontend/images/ic_bank.png" alt="" class="bank-image">
+                                    <div class="description">
+                                        <h3>PT Nomads ID</h3>
+                                        <p>
+                                            09876567
+                                            <br>
+                                            Bank Central Asia
+                                        </p>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+                                <div class="bank-item pb-3">
+                                    <img src="frontend/images/ic_bank.png" alt="" class="bank-image">
+                                    <div class="description">
+                                        <h3>PT Nomads ID</h3>
+                                        <p>
+                                            09876567
+                                            <br>
+                                            Bank HSBC
+                                        </p>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </div>
                         </div>
                         <!-- Button -->
                         <div class="join-container">
                             <a href="#" class="btn btn-block btn-join-now mt-3 py-2">
-                                Join Now
+                                I Have Made Payment
+                            </a>
+                        </div>
+                        <div class="text-center mt-3">
+                            <a href="#" class="text-muted">
+                                Cancel Booking
                             </a>
                         </div>
                     </div>
