add success page

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                 NUSA PENIDA
                             </div>
                             <div class="travel-button mt-auto">
-                                <a href="#" class="btn btn-travel-details">
+                                <a href="details.html" class="btn btn-travel-details">
                                     View Details
                                 </a>
                             </div>
