--- a/checkout.html
+++ b/checkout.html
@@ -224,12 +224,12 @@
                         </div>
                         <!-- Button -->
                         <div class="join-container">
-                            <a href="#" class="btn btn-block btn-join-now mt-3 py-2">
+                            <a href="success.html" class="btn btn-block btn-join-now mt-3 py-2">
                                 I Have Made Payment
                             </a>
                         </div>
                         <div class="text-center mt-3">
-                            <a href="#" class="text-muted">
+                            <a href="details.html" class="text-muted">
                                 Cancel Booking
                             </a>
                         </div>
