--- a/details.html
+++ b/details.html
@@ -209,7 +209,7 @@
                         </div>
                         <!-- Button -->
                         <div class="join-container">
-                            <a href="#" class="btn btn-block btn-join-now mt-3 py-2">
+                            <a href="checkout.html" class="btn btn-block btn-join-now mt-3 py-2">
                                 Join Now
                             </a>
                         </div>
